--- a/composer.json
+++ b/composer.json
@@ -9,33 +9,29 @@
         "security",
         "auth0"
     ],
-    "config": {
-        "platform": {
-            "php": "5.5"
-        }
-    },
     "homepage": "http://github.com/auth0/jwt-auth-bundle",
     "license": "MIT",
     "authors": [
         {
-            "name": "Germán Lena",
-            "email": "german@auth0.com"
-        },
-        {
-            "name": "Josh Cunningham",
-            "email": "josh.cunningham@auth0.com"
+            "name": "Auth0",
+            "email": "support@auth0.com",
+            "homepage": "http://www.auth0.com/"
         }
     ],
     "require": {
-        "php": "^5.5 || ^7.0",
-        "symfony/framework-bundle": "^2.8 || ~3.0 || ~4.0 || ~5.0",
-        "auth0/auth0-php": "^5.2"
+        "php": "^7.4 | ^8.0",
+        "symfony/framework-bundle": "^4.4 || ~5.1",
+        "auth0/auth0-php": "^7.6",
+        "monolog/monolog": "^2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.36 || ^5.7.21",
+        "phpunit/phpunit": "^9.3",
         "nyholm/symfony-bundle-test": "^1.0.2",
-        "symfony/framework-bundle": "^2.8 || ~3.3.0",
-        "symfony/security": "^2.8 || ~3.3.0"
+        "symfony/security": "^4.4 || ~5.1",
+        "squizlabs/php_codesniffer": "^3.2",
+        "phpcompatibility/php-compatibility": "^8.1",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
+        "phpstan/phpstan": "^0.12.64"
     },
     "autoload": {
         "psr-4": {
@@ -44,7 +40,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Auth0\\JWTAuthBundle\\": "Tests/"
+            "Auth0\\JWTAuthBundle\\Tests\\": "Tests/"
         }
     }
 }
