--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,25 +1,16 @@
 services:
-    jwt_auth.auth0_service:
-        class: Auth0\JWTAuthBundle\Security\Auth0Service
-        arguments: ["%jwt_auth.api_secret%","%jwt_auth.domain%","%jwt_auth.api_identifier%","%jwt_auth.authorized_issuer%","%jwt_auth.secret_base64_encoded%", "%jwt_auth.supported_algs%", ~]
+    _defaults:
+        autowire: true
+        autoconfigure: true
 
     Auth0\JWTAuthBundle\Security\Auth0Service:
-        alias: jwt_auth.auth0_service
-
-    jwt_auth.jwt_authenticator:
-        class:     Auth0\JWTAuthBundle\Security\JWTAuthenticator
-        arguments: ["@jwt_auth.auth0_service"]
-
-    jwt_auth.cache.null:
-        class: Auth0\SDK\Helpers\Cache\NoCacheHandler
-
-    jwt_auth.cache.file_system:
-        class: Auth0\SDK\Helpers\Cache\FileSystemCacheHandler
-
-    jwt_auth.security.guard.jwt_guard_authenticator:
-        class: Auth0\JWTAuthBundle\Security\Guard\JwtGuardAuthenticator
         arguments:
-            - "@jwt_auth.auth0_service"
+            $tokenVerifiers: !tagged_iterator jwt_auth.module.definition
+            $logger: '@?logger'
 
-    jwt_auth.security.user.jwt_user_provider:
-        class: Auth0\JWTAuthBundle\Security\User\JwtUserProvider
+    Auth0\JWTAuthBundle\Security\Guard\JwtGuardAuthenticator: ~
+    Auth0\JWTAuthBundle\Security\User\JwtUserProvider: ~
+
+    jwt_auth.auth0_service: '@Auth0\JWTAuthBundle\Security\Auth0Service'
+    jwt_auth.security.guard.jwt_guard_authenticator: '@Auth0\JWTAuthBundle\Security\Guard\JwtGuardAuthenticator'
+    jwt_auth.security.user.jwt_user_provider: '@Auth0\JWTAuthBundle\Security\User\JwtUserProvider'
