--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,8 @@
     ],
     "require": {
         "php": "^7.4 | ^8.0",
-        "symfony/framework-bundle": "^4.4 || ~5.1",
-        "auth0/auth0-php": "^7.6",
-        "monolog/monolog": "^2.2"
+        "symfony/framework-bundle": "^4.4 || ~5.2",
+        "auth0/auth0-php": "^7.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3",
