--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@
 # PHPUnit
 /example/app/phpunit.xml
 /example/phpunit.xml
+.phpunit.result.cache
+/coverage
 
 # Composer PHAR
 /example/composer.phar
